--- a/package.json
+++ b/package.json
@@ -19,11 +19,10 @@
     "mobx-react": "^6.1.4",
     "mobx-utils": "^5.5.1",
     "node-polyglot": "^2.4.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.1",
     "prettier": "^1.18.2",
     "react": "^16.9.0",
     "react-animate-on-scroll": "^2.1.5",
-    "react-app-rewired": "^2.1.5",
     "react-dom": "^16.9.0",
     "react-each": "^1.1.0",
     "react-helmet": "^5.2.1",
@@ -37,11 +36,13 @@
     "typescript": "3.5.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "deploy": "sh deploy.sh",
+    "cypress:open": "./node_modules/.bin/cypress open",
+    "cypress:run": "./node_modules/.bin/cypress run --browser chrome",
     "lint": "eslint ./src/**",
     "lint:fix": "eslint --fix ./src/**",
     "format": "prettier --write \"./**/*.+(js|jsx|ts|tsx|json|css|md)\""
@@ -67,6 +68,10 @@
     "@types/react-animate-on-scroll": "^2.1.2",
     "@types/react-dom": "16.8.5",
     "@types/react-router-dom": "^4.3.4",
-    "@types/styled-components": "^4.1.19"
+    "@types/styled-components": "^4.1.19",
+    "babel-plugin-jsx-remove-data-test-id": "^2.1.3",
+    "customize-cra": "^0.9.1",
+    "cypress": "^3.8.3",
+    "react-app-rewired": "^2.1.5"
   }
 }
