--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@api-platform/admin": "^2.0.1",
     "@material-ui/core": "^4.5.2",
     "@material-ui/icons": "^4.5.1",
     "@types/react-helmet": "^5.0.14",
