--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@typescript-eslint/eslint-plugin": "^2.5.0",
     "@typescript-eslint/parser": "^2.5.0",
     "animate.css": "^3.7.2",
+    "class-transformer": "^0.2.3",
     "classnames": "^2.2.6",
     "computed-async-mobx": "^4.2.1",
     "eslint": "^6.6.0",
@@ -32,6 +33,7 @@
     "react-router-dom": "^5.0.1",
     "react-router-transition": "^1.3.0",
     "react-scripts": "3.1.2",
+    "reflect-metadata": "^0.1.13",
     "styled-components": "^4.4.0",
     "tailwindcss": "^1.1.3",
     "typescript": "3.5.3"
