--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "reflect-metadata": "^0.1.13",
     "styled-components": "^4.4.0",
     "tailwindcss": "^1.1.3",
+    "tubular-react": "^4.1.7",
     "typescript": "3.5.3"
   },
   "scripts": {
