--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "class-transformer": "^0.2.3",
     "classnames": "^2.2.6",
     "computed-async-mobx": "^4.2.1",
+    "email-validator": "^2.0.4",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.4.0",
@@ -37,7 +38,8 @@
     "styled-components": "^4.4.0",
     "tailwindcss": "^1.1.3",
     "tubular-react": "^4.1.7",
-    "typescript": "3.5.3"
+    "typescript": "3.5.3",
+    "lodash": "latest"
   },
   "scripts": {
     "start": "react-app-rewired start",
