--- a/package.json
+++ b/package.json
@@ -3,21 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@api-platform/admin": "^2.0.1",
     "@material-ui/core": "^4.5.2",
     "@material-ui/icons": "^4.5.1",
-    "@types/react-helmet": "^5.0.14",
     "@typescript-eslint/eslint-plugin": "^2.5.0",
     "@typescript-eslint/parser": "^2.5.0",
     "animate.css": "^3.7.2",
     "class-transformer": "^0.2.3",
-    "classnames": "^2.2.6",
     "computed-async-mobx": "^4.2.1",
     "email-validator": "^2.0.4",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "lodash": "latest",
     "mobx": "^5.14.2",
     "mobx-react": "^6.1.4",
     "mobx-utils": "^5.5.1",
@@ -35,11 +33,7 @@
     "react-router-transition": "^1.3.0",
     "react-scripts": "3.1.2",
     "reflect-metadata": "^0.1.13",
-    "styled-components": "^4.4.0",
-    "tailwindcss": "^1.1.3",
-    "tubular-react": "^4.1.7",
-    "typescript": "3.5.3",
-    "lodash": "latest"
+    "typescript": "3.5.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -73,6 +67,7 @@
     "@types/react": "16.9.2",
     "@types/react-animate-on-scroll": "^2.1.2",
     "@types/react-dom": "16.8.5",
+    "@types/react-helmet": "^5.0.14",
     "@types/react-router-dom": "^4.3.4",
     "@types/styled-components": "^4.1.19",
     "babel-plugin-jsx-remove-data-test-id": "^2.1.3",
