--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-router-transition": "^1.3.0",
     "react-scripts": "3.1.2",
     "reflect-metadata": "^0.1.13",
-    "typescript": "3.5.3"
+    "typescript": "3.5.3",
+    "@material-ui/lab": "latest"
   },
   "scripts": {
     "start": "react-app-rewired start",
